[gd_scene load_steps=17 format=3 uid="uid://uefifth6fr1o"]

[ext_resource type="Script" path="res://terrain_test/terrain_test.gd" id="1_xsd5k"]
[ext_resource type="PackedScene" uid="uid://bcwf0g15825rg" path="res://terrain_test/player.tscn" id="2_8heks"]
[ext_resource type="PackedScene" uid="uid://uejeih1mge6e" path="res://terrain/terrain.tscn" id="3_bouwu"]
[ext_resource type="Material" uid="uid://jrqg4klf3dht" path="res://assets/panorama/sky_panorama.tres" id="3_s7b1k"]
[ext_resource type="Script" path="res://gui/Terrain CanvasLayer.gd" id="5_7k00y"]
[ext_resource type="Script" path="res://gui/MeshSizeInput.gd" id="6_6ol8e"]
[ext_resource type="Script" path="res://gui/ScaleModInput.gd" id="7_ybsao"]
[ext_resource type="Script" path="res://gui/ChunkDistInput.gd" id="8_3d5ve"]
[ext_resource type="Script" path="res://gui/PeakDensityInput.gd" id="9_od1ba"]
[ext_resource type="Script" path="res://gui/PeakScaleInput.gd" id="10_sb632"]
[ext_resource type="Script" path="res://gui/RidgeHeightInput.gd" id="11_3usb6"]
[ext_resource type="Script" path="res://gui/RidgeDistInput.gd" id="12_d844q"]
[ext_resource type="Script" path="res://gui/RidgeWidthInput.gd" id="13_bemat"]
[ext_resource type="Script" path="res://gui/Flying Button.gd" id="14_mr243"]

[sub_resource type="Sky" id="Sky_487rm"]
sky_material = ExtResource("3_s7b1k")

[sub_resource type="Environment" id="Environment_6j8ih"]
background_mode = 2
sky = SubResource("Sky_487rm")

[node name="Terrain_Test" type="Node3D"]
script = ExtResource("1_xsd5k")

[node name="Player" parent="." instance=ExtResource("2_8heks")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.796, 0)

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.515381, 0.322113)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.328372, 0.944548, 0, -0.944548, 0.328372, -4.24987, 73.7393, 4.92985)
light_color = Color(1, 1, 0.815686, 1)
light_angular_distance = 0.5
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="DirectionalLight3D"]
environment = SubResource("Environment_6j8ih")

[node name="terrain" parent="." instance=ExtResource("3_bouwu")]
chunk_distance = 20

[node name="Terrain CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("5_7k00y")

[node name="MarginContainer" type="MarginContainer" parent="Terrain CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -66.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0

[node name="GridContainer" type="GridContainer" parent="Terrain CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="MeshSizeContainer" type="HSplitContainer" parent="Terrain CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
split_offset = 120

[node name="MeshSizeLabel" type="Label" parent="Terrain CanvasLayer/MarginContainer/GridContainer/MeshSizeContainer"]
layout_mode = 2
text = "Mesh Size"

[node name="MeshSizeInput" type="SpinBox" parent="Terrain CanvasLayer/MarginContainer/GridContainer/MeshSizeContainer"]
layout_mode = 2
min_value = 4.0
max_value = 10.0
value = 6.0
update_on_text_changed = true
select_all_on_focus = true
script = ExtResource("6_6ol8e")

[node name="ScaleModContainer" type="HSplitContainer" parent="Terrain CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
split_offset = 120

[node name="ScaleModLabel" type="Label" parent="Terrain CanvasLayer/MarginContainer/GridContainer/ScaleModContainer"]
layout_mode = 2
text = "Scale Modifier"

[node name="ScaleModInput" type="LineEdit" parent="Terrain CanvasLayer/MarginContainer/GridContainer/ScaleModContainer"]
layout_mode = 2
focus_mode = 1
text = "1.0"
script = ExtResource("7_ybsao")

[node name="ChunkDistContainer" type="HSplitContainer" parent="Terrain CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
split_offset = 120

[node name="ChunkDistLabel" type="Label" parent="Terrain CanvasLayer/MarginContainer/GridContainer/ChunkDistContainer"]
layout_mode = 2
text = "Chunk Distance"

[node name="ChunkDistInput" type="SpinBox" parent="Terrain CanvasLayer/MarginContainer/GridContainer/ChunkDistContainer"]
layout_mode = 2
min_value = 5.0
max_value = 500.0
step = 5.0
value = 5.0
script = ExtResource("8_3d5ve")

[node name="PeakDensityContainer" type="HSplitContainer" parent="Terrain CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
split_offset = 120

[node name="PeakDensityLabel" type="Label" parent="Terrain CanvasLayer/MarginContainer/GridContainer/PeakDensityContainer"]
layout_mode = 2
text = "Peak Density"

[node name="PeakDensityInput" type="SpinBox" parent="Terrain CanvasLayer/MarginContainer/GridContainer/PeakDensityContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 2.0
script = ExtResource("9_od1ba")

[node name="PeakScaleContainer" type="HSplitContainer" parent="Terrain CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
split_offset = 120

[node name="PeakScaleLabel" type="Label" parent="Terrain CanvasLayer/MarginContainer/GridContainer/PeakScaleContainer"]
layout_mode = 2
text = "Peak Scale"

[node name="PeakScaleInput" type="SpinBox" parent="Terrain CanvasLayer/MarginContainer/GridContainer/PeakScaleContainer"]
layout_mode = 2
max_value = 20.0
value = 5.0
script = ExtResource("10_sb632")

[node name="RidgeHeightContainer" type="HSplitContainer" parent="Terrain CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
split_offset = 120

[node name="RidgeHeightLabel" type="Label" parent="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeHeightContainer"]
layout_mode = 2
text = "Ridge Height"

[node name="RidgeHeightInput" type="LineEdit" parent="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeHeightContainer"]
layout_mode = 2
focus_mode = 1
text = "20.0"
script = ExtResource("11_3usb6")

[node name="RidgeDistContainer" type="HSplitContainer" parent="Terrain CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
split_offset = 120

[node name="RidgeDistLabel" type="Label" parent="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeDistContainer"]
layout_mode = 2
text = "Ridge Distance"

[node name="RidgeDistInput" type="LineEdit" parent="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeDistContainer"]
layout_mode = 2
focus_mode = 1
text = "100.0"
script = ExtResource("12_d844q")

[node name="RidgeWidthContainer" type="HSplitContainer" parent="Terrain CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
split_offset = 120

[node name="RidgeWidthLabel" type="Label" parent="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeWidthContainer"]
layout_mode = 2
text = "Ridge Width"

[node name="RidgeWidthInput" type="LineEdit" parent="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeWidthContainer"]
layout_mode = 2
focus_mode = 1
text = "10.0"
script = ExtResource("13_bemat")

[node name="Flying Button" type="Button" parent="Terrain CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
focus_mode = 0
text = "Fly"
script = ExtResource("14_mr243")

[node name="Reset Button" type="Button" parent="Terrain CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
focus_mode = 0
text = "Reset Terrain"

[node name="Origin Button" type="Button" parent="Terrain CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Origin"

[connection signal="flying" from="." to="Terrain CanvasLayer/MarginContainer/GridContainer/Flying Button" method="_on_terrain_test_flying"]
[connection signal="hide_ui" from="." to="Terrain CanvasLayer" method="_on_terrain_test_hide_ui"]
[connection signal="player_position" from="." to="terrain" method="_on_terrain_test_player_position"]
[connection signal="check_position" from="terrain" to="." method="_on_terrain_check_position"]
[connection signal="terrain_made" from="terrain" to="." method="_on_terrain_terrain_made"]
[connection signal="value_changed" from="Terrain CanvasLayer/MarginContainer/GridContainer/MeshSizeContainer/MeshSizeInput" to="Terrain CanvasLayer/MarginContainer/GridContainer/MeshSizeContainer/MeshSizeInput" method="_on_value_changed"]
[connection signal="text_submitted" from="Terrain CanvasLayer/MarginContainer/GridContainer/ScaleModContainer/ScaleModInput" to="Terrain CanvasLayer/MarginContainer/GridContainer/ScaleModContainer/ScaleModInput" method="_on_text_submitted"]
[connection signal="value_changed" from="Terrain CanvasLayer/MarginContainer/GridContainer/ChunkDistContainer/ChunkDistInput" to="Terrain CanvasLayer/MarginContainer/GridContainer/ChunkDistContainer/ChunkDistInput" method="_on_value_changed"]
[connection signal="value_changed" from="Terrain CanvasLayer/MarginContainer/GridContainer/PeakDensityContainer/PeakDensityInput" to="Terrain CanvasLayer/MarginContainer/GridContainer/PeakDensityContainer/PeakDensityInput" method="_on_value_changed"]
[connection signal="value_changed" from="Terrain CanvasLayer/MarginContainer/GridContainer/PeakScaleContainer/PeakScaleInput" to="Terrain CanvasLayer/MarginContainer/GridContainer/PeakScaleContainer/PeakScaleInput" method="_on_value_changed"]
[connection signal="text_submitted" from="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeHeightContainer/RidgeHeightInput" to="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeHeightContainer/RidgeHeightInput" method="_on_text_submitted"]
[connection signal="text_submitted" from="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeDistContainer/RidgeDistInput" to="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeDistContainer/RidgeDistInput" method="_on_text_submitted"]
[connection signal="text_submitted" from="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeWidthContainer/RidgeWidthInput" to="Terrain CanvasLayer/MarginContainer/GridContainer/RidgeWidthContainer/RidgeWidthInput" method="_on_text_submitted"]
[connection signal="pressed" from="Terrain CanvasLayer/MarginContainer/GridContainer/Flying Button" to="." method="_on_flying_button_pressed"]
[connection signal="pressed" from="Terrain CanvasLayer/MarginContainer/GridContainer/Reset Button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Terrain CanvasLayer/MarginContainer/GridContainer/Origin Button" to="." method="_on_origin_button_pressed"]
